Grace/tests/gibbs/errors/t166.grace
// ERROR = P1023
if (true then {
    print "true"
}
